# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package]
name = "aoc2019_day14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file = { path = "../../file" }
regex = "1.10.4"
itertools="0.12.1"
